--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,9 @@
 @import "../../vars.css";
 
 .navbar{
+    /* position: fixed;
+    top: 0; 
+    width: 100%; */
     position: relative;
     display: flex;
     align-items: center;
@@ -8,6 +11,7 @@
     padding-top: 61px;
     z-index: 2;
     margin: 0 10%;
+
 }
 
 .title{
@@ -31,11 +35,33 @@
     list-style: none;
 }
 
-.menuItems a{
+.menuItem{
     font-size: 25px;
     text-decoration: none;
-    color: var(--color-text)
+    color: var(--color-text);
+    position: relative;
 }
+.menuItem::before{
+    content: "";
+    width: 2rem;
+    height: 0.2rem;
+    background-image: linear-gradient(90deg, #a993fe 0%, #576cbc 100%);
+    border-radius: 0.5rem;
+    position:absolute;
+    bottom: -0.6rem;
+    opacity: 0;
+    transform: translateX(-1.5ram);
+    transition: all 0.3s ease;
+}
+
+.menuItem:hover::before{
+    width: 100%;
+    transform: translateX(0);
+    opacity:  1;
+}
+
+
+
 
 @media screen and (max-width: 830px){
     .navbar{
