--- a/src/vars.css
+++ b/src/vars.css
@@ -2,6 +2,8 @@
     /* Colours */
     --color-text: #fff;
     --color-primary: #576cbc;
+    --color-primary1: #4a5a9d;
+
     --color-secondary: #19376d;
     --color-dark: #0b2447;
     --color-bg: #04152d;
