feat: Add media query rule for screens up to 408px wide

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -101,3 +101,12 @@
         z-index: 1;
     }
 }
+@media screen and (max-width: 830px){
+    .navbar{
+        padding-top: 30px;
+    }
+    .menu{
+        margin-right: 0%;
+    }
+    
+}
