--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -24,7 +24,6 @@
 }
 .aboutImage {
   width: 35%;
-  /* position: relative;  */
 }
 
 .aboutImageBlur {
@@ -89,4 +88,25 @@
     padding-left: 0;
     padding-right: 0;
   }
+}
+
+@media screen and (max-width: 408px) {
+  .container {
+    margin-top: 12px;
+    
+  }
+    .aboutItem {
+      display: flex;
+      flex-direction: column;
+      align-items: center; 
+      text-align: center;
+      padding: 0px;
+ 
+    }
+    
+    .aboutItemText p{
+      margin-top: 5px;
+      font-size: 23px;
+    }  
+    
 }
