--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -18,9 +18,10 @@
 }
 
 .text h2 {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 700;
   letter-spacing: 4px;
+  margin-bottom: 5%;
 }
 
 .text p {
@@ -37,22 +38,14 @@
   list-style: none;
   gap: 26px;
 }
-.link {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-  
-}
-.link a {
-    color: var(--color-text);
-    text-decoration: none;
-  }
+
 
 .copywrite {
   display: flex;
   flex-direction: column;
   padding: 20px;
   align-items: center;
+  text-align: center;
   color: var(--color-text);
   font-size: 12px;
   font-weight: 200;
@@ -60,18 +53,34 @@
 }
 
 @media screen and (max-width: 830px) {
-    .content{
-        display: flex;
-        flex-direction: column;
-        gap: 23px;
-    }
-    .text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-    
-      .links {
-        align-items: center;
-      }
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .links {
+    align-items: center;
+  }
+}
+@media screen and (max-width: 408px) {
+  .container {
+    margin-top: 49px;
+  }
+  .text h2 {
+    font-size: 40px;
+    margin-bottom: 12px;
+  }
+  
+  .text p {
+    font-size: 28px;
+    text-align: center;
+  }
+ 
+  
 }
