--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -2,7 +2,7 @@
 
 .container {
   color: var(--color-text);
-  margin-top: 79px;
+  margin-top: 120px;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -13,7 +13,7 @@
   font-weight: 700;
   letter-spacing: 1.75px;
   text-transform: uppercase;
-  margin-bottom: 3%;
+  margin-bottom: 5%;
 }
 
 .content {
@@ -105,7 +105,7 @@
   .content{
     flex-direction: column;
     align-items: center;
-    gap : 34px;
+    gap : 50px;
   }
 
   .skills{
@@ -117,5 +117,59 @@
     width: 100%;
     gap: 9px;
   }
+}
+
+@media screen and (max-width: 408px) {
+  .title {
+    margin-bottom: 15%;
+  }
+
+  .container {
+    margin-top: 12px;
+   
+  }
+  .skillImgeContainer {
+    width: 100px;
+    height: 100px;
+  }
+  .skillImgeContainer img {
+    width: 55px;
+  }
   
+  .skill p {
+    font-size: 16px;
+    font-weight: 400;
+  }
+    
+  .historyItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 12px;
+    padding: 20px;
+  }
+  
+  .historyItem img {
+    margin-right: 0px;
+    margin-bottom: 10px;
+    width: 60px;
+  }
+    
+  .historyItemDetails h3 {
+      font-size: 20px;
+      font-weight:400;
+  }
+  
+  .historyItemDetails p {
+      font-size: 14px;
+      font-weight: 300;
+  }
+  
+  .historyItemDetails ul {
+      margin-top: 6px;
+      list-style-position: inside;
+      font-size: 18px;
+      list-style-type: disc;
+      margin-left: 10px;
+  }
 }
