--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -112,3 +112,31 @@
     margin-bottom: 50px;
   }
 }
+
+@media screen and (max-width: 408px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+  .content {
+    align-items: center;
+  }
+  .heroImg {
+    padding: 0%;
+    margin-bottom: 50px;
+  }
+  .title {
+    font-size: 50px;
+    font-weight: 700;
+  }
+
+  .description {
+    font-size: 20px;
+    text-align: center;
+  }
+  .contactBtn {
+    font-size: 18px;
+    font-weight: 500;
+    padding: 17px 26px;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  }
+}
