--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,17 +1,19 @@
 @import "../../vars.css";
 
 .container{
-    margin-top: 76px;
+    margin-top: 120px;
     color: var(--color-text);
     margin-left: 10%;
     margin-right: 10%;
+    
 
 }
 .title {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
+    margin-bottom: 5%;
 }
 .projects{
     margin-top: 37px;
