--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -31,7 +31,7 @@
   list-style: none;
 }
 .skill {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 400;
   border-radius: 100px;
   background-color: var(--color-dark);
@@ -46,9 +46,13 @@
 .link {
   text-decoration: none;
   color: var(--color-text);
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 600;
   border-radius: 100px;
-  background: var(--color-primary);
+  background-image: linear-gradient(90deg, #a993fe 0%, #576cbc 100%);
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
   padding: 1px 22px;
+}
+.link:hover {
+    background: var(--color-primary);
 }
